*Empty MediaWiki Message*

--- a/Schatliester_(Turdus_pilaris).mw
+++ b/Schatliester_(Turdus_pilaris).mw
@@ -1,12 +1,14 @@
 [[Bestaand:Turdus pilaris II.jpg|thumb|250px|Schatliester]]
-De '''schatliester''' of de '''kramsvoegel''' ([[Latien]]: ''Turdus pilaris'') is een [[zangvoegel]] uut de femilie van de [[liesters]] (Turdidae).
+De '''schatliester''' (ok wel: ''schatter'' of ''kramsvoegel''; [[Latien]]: ''Turdus pilaris'') is een [[zangvoegel]] uut de femilie van de [[liesters]] (Turdidae).
 
 De voegels nusselen in bomen of op gebouwen. Ze bruden in [[Oost-Europa|Oost-Europese]] lanen zoas [[Duutslaand]], [[Pooln|Polen]] en [[Ruslaand]]. In 1967 bruudde et eerste peer in België, en rond 1983 weren d'r al roem 10.000 bruudperen in [[Wallonië]] en zoe'n 500 in [[Limburg (Nederlaand)|Limburg]].
 
 In de winter is de schatliester in [[Nederlaand]] en [[België]] an te treffen. Ze kommen dan ok op eupen terreinen veur, vaeke tegere mit aandere liesters.
 
 == Nedersaksisch ==
+* Algemien: ''tjakker, sjakker, kramsvo(e)gel/-voggel, schatliester''
 * [[Drèents]]: ''schatliester''
+* [[Grunnegs]]: ''tjakker''
 * [[Tweants]]: ''sjakker''
 
 == Galleri'je ==
