[[Saxophone_alto.jpg]] is vervungen deur [[Yamaha_YAS-25_20040517.jpg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR2|]]

--- a/Saxofoon.mw
+++ b/Saxofoon.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Saxophone alto.jpg|thumb|right|alt-saxofoon]]
+[[Bestaand:Yamaha YAS-25 20040517.jpg|thumb|right|alt-saxofoon]]
 Nen '''Saxofoon''', ook wal '''saksofoon''' (vake of ekortt töt '''sax'''), is n konies bloasinstrumeant (n buis wörd noar t eande hen breder). Saxofoons in heugere stemmingn zeent recht. Bie Saxofoons in legere stemmingn is n buis is vake in S-vörm eböagn um t instrumeant körter te maakn. De rechte soortn wordt nog wal es met nen [[klarinet]] duur mekoar ehaald).
 
 n Buis hef geater dee't of eslötn köant wordn met klepkes, um zo n toonheuge te veraandern. t Hele apparaat is van [[kopper]], mear t wörd nit töt de kopperne bloasinstrumeantn ereknd, umdet t n moondstukke hef van [[reet|reed]], woerduur t n hooltinstrumeant eneumd wörd.
