--- a/Revier.mw
+++ b/Revier.mw
@@ -1,3 +1,4 @@
+[[File:Claude Monet - Branch of the Seine near Giverny.JPG|thumb|Seine, Claude Monet, 1897]]
 [[Bestaand:Rising-sun-indiana-ohio-river--from-above.jpg|thumb|Revier in de [[Verienigde Staoten van Amerika]]]]
 Een '''revier''' is een min of meer netuurlike waeterstroom. Wi'j onderscheiden ''oceanische revieren'' die in een [[zee]] of [[oceaan]] aendigen, en ''kontinentaole revieren'' die in een [[meer]], [[moeras]] of [[woestijn]] aendigen. Een [[laek]] is de anduding veur een kleine revier. 
 
