--- a/Kenia.mw
+++ b/Kenia.mw
@@ -1,3 +1,5 @@
+{{Laandtabel-twd|naaminlaandssproak=Jamhuri ya Kenya|naam-nds=Kenya|vlagge=Flag_of_Kenya.svg|naam=|woapn=Coat_of_arms_of_Kenya_(Official).svg|lokasie=LocationKenya.svg|sproaken=engelsk, swahili, kikuyu, luhiya, luo, kalenjin, kamba, kisii, meru|heufdstad=Nairobi|regeringsvörm=Federale republik|religie=Christendom (83%), Islam (15%), Hinduisme, buddhisme|pctwater=2.3|km2=580.367|dichtheid=78|inwonners=49,364,325|region=|breedtegroad=36/48/0/E|lengtegroad=1/16/0/S|volksleed="Ee Mungu Nguvu Yetu" (Oh God of all creation)|munteenheid=Kenyan shilling|valutakode=(KES)|tiedzone=UTC+3 (EAT)|feestdag=|tld=.ke|laandkode=KE|tel=+254|webstea=|ofbeelding2=|umskrieving2=}}
+
 '''Kenya''' of '''Kenia''', officieel de '''Kenyaanske Republyk''' ([[Swahili]]: ''Jamhuri ya Kenya'') is een land in [[Afrika]]. Bestüurlik besteyt et uut 47 half-unafhankelike gråvskappen med yders nen eygen guvernöör. Med 580.367 kilometer in et veerkant is Kenya et 48.-gröätste land up de wearld en med meyr as 52,2 miljoon inwoaners et 27. drukstbevolkte land.<ref>[https://population.un.org/wpp/DataQuery/ population.un.org. World Population Prospects - Population Division - United Nations.] Bekeaken up 29 januåry 2019.</ref> Höyvdstad van Kenya is [[Nairobi]]. De öldste stad en vrogere höyvdstad is [[Mombasa]]. [[Kisumu Stad]] is de dardegröätste stad en binnenlandske haven an et [[Viktoriameyr]]. Andere vöärname steadelike gebeden sint [[Nakuru]] en [[Eldoret]].
 
 Rund 500 [[Christus|v. Kr.]] tröäken nilotiske herders vanuut et hüdige [[Süüd]]-[[Sudan]] når Kenya. Europeeske [[kolonialisme|kolonisaty]] van Kenya begün in de 19. eywe, do as de europeanen meyr et binnenland intröäken. Et hüdige Kenya untstünd uut nen beskarmståt dee et [[Britske Ryk]] in [[1895]] uutröäp en de dårup volgende kenyaanske kolony, den as in [[1920]] begün. Verskillende uneynigheden tüsken [[Grout-Brittanie]] en de kolony leidden töt de [[Mau Mau-upstand]] in [[1952]] en et uutroupen van de unafhankelikheid in [[1963]]. Kenya bleav dårnå lid van et [[Britske Gemenebest]]. De hüdige [[grundwet]] stamt uut [[2010]] en vervangt de unafhankelikheidsgrundwet van 1963.
