--- a/Kenia.mw
+++ b/Kenia.mw
@@ -1,4 +1,30 @@
-{{Laandtabel-twd|naaminlaandssproak=Jamhuri ya Kenya|naam-nds=Kenya|vlagge=Flag_of_Kenya.svg|naam=|woapn=Coat_of_arms_of_Kenya_(Official).svg|lokasie=LocationKenya.svg|sproaken=engelsk, swahili, kikuyu, luhiya, luo, kalenjin, kamba, kisii, meru|heufdstad=Nairobi|regeringsvörm=Federale republik|religie=Christendom (83%), Islam (15%), Hinduisme, buddhisme|pctwater=2.3|km2=580.367|dichtheid=78|inwonners=49,364,325|region=|breedtegroad=36/48/0/E|lengtegroad=1/16/0/S|volksleed="Ee Mungu Nguvu Yetu" (Oh God of all creation)|munteenheid=Kenyan shilling|valutakode=(KES)|tiedzone=UTC+3 (EAT)|feestdag=|tld=.ke|laandkode=KE|tel=+254|webstea=|ofbeelding2=|umskrieving2=}}
+{{Laandtabel-twd|
+naaminlaandssproak=Jamhuri ya Kenya|
+naam-nds=Kenya|
+vlagge=Flag_of_Kenya.svg|
+naam=Kenya|
+woapn=Coat_of_arms_of_Kenya_(Official).svg|
+lokasie=LocationKenya.svg|
+sproaken=[[engelsk]], [[swahili]], [[kikuyu]], [[luhiya]], [[luo]], [[kalenjin]], [[kamba]], [[kisii]], [[meru]]|
+heufdstad=[[Nairobi]]|
+regeringsvörm=Federale republik|
+religie=Christendom (83%), Islam (15%), Hinduisme, buddhisme|
+pctwater=2.3|
+km2=580.367|
+dichtheid=78|
+inwonners=49.364.325|region=
+|breedtegroad=36/48//E|
+lengtegroad=1/16//S|
+volksleed="Ee Mungu Nguvu Yetu" (Oh God of all creation)|
+munteenheid=Kenyan shilling|
+valutakode=(KES)|tiedzone=UTC+3 (EAT)|
+feestdag=|tld=.ke|
+laandkode=KE|
+tel=+254|
+webstea=|
+ofbeelding2=|
+umskrieving2=
+}}
 
 '''Kenya''' of '''Kenia''', officieel de '''Kenyaanske Republyk''' ([[Swahili]]: ''Jamhuri ya Kenya'') is een land in [[Afrika]]. Bestüurlik besteyt et uut 47 half-unafhankelike gråvskappen med yders nen eygen guvernöör. Med 580.367 kilometer in et veerkant is Kenya et 48.-gröätste land up de wearld en med meyr as 52,2 miljoon inwoaners et 27. drukstbevolkte land.<ref>[https://population.un.org/wpp/DataQuery/ population.un.org. World Population Prospects - Population Division - United Nations.] Bekeaken up 29 januåry 2019.</ref> Höyvdstad van Kenya is [[Nairobi]]. De öldste stad en vrogere höyvdstad is [[Mombasa]]. [[Kisumu Stad]] is de dardegröätste stad en binnenlandske haven an et [[Viktoriameyr]]. Andere vöärname steadelike gebeden sint [[Nakuru]] en [[Eldoret]].
 
