*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -13,8 +13,8 @@ pctwater=2.3|
 km2=580.367|
 dichtheid=78|
 inwonners=49.364.325|region=
-|breedtegroad=36/48//E|
-lengtegroad=1/16//S|
+|breedtegroad=1/16//S|
+lengtegroad=36/48//E|
 volksleed="Ee Mungu Nguvu Yetu" (Oh God of all creation)|
 munteenheid=Kenyan shilling|
 valutakode=(KES)|tiedzone=UTC+3 (EAT)|
