*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -26,7 +26,9 @@ ofbeelding2=|
 umskrieving2=
 }}
 
-'''Kenya''' of '''Kenia''', officieel de '''Kenyaanske Republyk''' ([[Swahili]]: ''Jamhuri ya Kenya'') is een land in [[Afrika]]. Bestüurlik besteyt et uut 47 half-unafhankelike gråvskappen med yders nen eygen guvernöör. Med 580.367 kilometer in et veerkant is Kenya et 48.-gröätste land up de wearld en med meyr as 52,2 miljoon inwoaners et 27. drukstbevolkte land.<ref>[https://population.un.org/wpp/DataQuery/ population.un.org. World Population Prospects - Population Division - United Nations.] Bekeaken up 29 januåry 2019.</ref> Höyvdstad van Kenya is [[Nairobi]]. De öldste stad en vrogere höyvdstad is [[Mombasa]]. [[Kisumu Stad]] is de dardegröätste stad en binnenlandske haven an et [[Viktoriameyr]]. Andere vöärname steadelike gebeden sint [[Nakuru]] en [[Eldoret]].
+'''Kenya''' of '''Kenia''', officieel de '''Kenyaanske Republyk''' ([[Swahili]]: ''Jamhuri ya Kenya'') is een land in [[Afrika]]. Med de klokke med grenset Kenya an [[Süüd-Sudan]] en [[Ethiopie]] in et noorden, [[Somalie]] in et noordousten, den [[Stillen Oceaan]] en de [[Seychellen]] in et süüdousten, [[Tanzania]] in et süden en an [[Uganda]] in et westen.
+Bestüürlik besteyt et uut 47 half-unafhankelike gråvskappen med yders nen eygen guvernöör. Med 580.367 kilometer in et veerkant is Kenya et 48.-gröätste land up de wearld en med meyr as 52,2 miljoon inwoaners et 27. drukstbevolkte land.<ref>[https://population.un.org/wpp/DataQuery/ population.un.org. World Population Prospects - Population Division - United Nations.] Bekeaken up 29 januåry 2019.</ref> Höyvdstad van Kenya is [[Nairobi]]. De öldste stad en vrogere höyvdstad is [[Mombasa]]. [[Kisumu Stad]] is de dardegröätste stad en binnenlandske haven an et [[Viktoriameyr]]. Andere vöärname steadelike gebeden sint [[Nakuru]] en [[Eldoret]].
+
 
 Rund 500 [[Christus|v. Kr.]] tröäken nilotiske herders vanuut et hüdige [[Süüd]]-[[Sudan]] når Kenya. Europeeske [[kolonialisme|kolonisaty]] van Kenya begün in de 19. eywe, do as de europeanen meyr et binnenland intröäken. Et hüdige Kenya untstünd uut nen beskarmståt dee et [[Britske Ryk]] in [[1895]] uutröäp en de dårup volgende kenyaanske kolony, den as in [[1920]] begün. Verskillende uneynigheden tüsken [[Grout-Brittanie]] en de kolony leidden töt de [[Mau Mau-upstand]] in [[1952]] en et uutroupen van de unafhankelikheid in [[1963]]. Kenya bleav dårnå lid van et [[Britske Gemenebest]]. De hüdige [[grundwet]] stamt uut [[2010]] en vervangt de unafhankelikheidsgrundwet van 1963.
 
