--- a/Kenia.mw
+++ b/Kenia.mw
@@ -35,7 +35,7 @@ Rund 500 [[Christus|v. Kr.]] tröäken nilotiske herders vanuut et hüdige [[Sü
 Kenia is ne presidentiäle representative demokratiske republik, wårin verköäsen verteagenwoordigers de belangen van de inwoaners behartigt en de president ståtshöyvd en regeyringsleider is. Et land is anslöäten by de [[Vereynigde Natys]], [[Wearldbanke]], [[Internationaal Monetäär Funds]]. [[COMESA]] en andere internationale organisatys. Med een döärsneyde inkoamen van 1460<ref>[https://data.worldbank.org/indicator/ny.gnp.pcap.cd?year_high_desc=true data.worldbank.org. GNI per capita, Atlas method (current US$).] Bekeaken up 29 januåry 2019.</ref> hevt Kenia ne middellaege inkoamensekonomy. Nå [[Ethiopie]] is Kenia de gröätste ekonomy van oust- en middel-Afrika,<ref>[http://www.imf.org/external/pubs/ft/weo/2011/01/weodata/weorept.aspx?sy=2008&ey=2011&scsm=1&ssd=1&sort=country&ds=.&br=1&c=664&s=NGDPD%2CNGDPDPC%2CPPPGDP%2CPPPPC%2CLP&grp=0&a=&pr.x=69&pr.y=14 imf.org. Kenia GDP purchasing power 2010: 66 Billion]. 14 September 2006.</ref> med Nairobi as regionaal kommercieel centrum. Landbouw is de gröätste sektor, tea en koffy brengt et meyste geld up. Blomenuutvoor wördt ouk vöärtan belangryker. De deenstenindustry is ne andere groute ekonomiske inkoamstenbrunne, med name tourisme. Kenia is lidmåt van et Oust-Afrikaanse Handelsblok. Gröätste afsetmarkt vöär Kenia is vöäral Afrika selv, med de Europeeske Unie as gode tweyde.<ref>[http://www.brookings.edu/~/media/research/files/papers/2016/05/16-kenya-country-case-study/kenya-country-case.pdf Mwangi S. Kumenyi, Francis M Mwega en Njuguna s. Ndung'u. The African Lions: Kenya country case study. Mei 2016. The Brookings Institution.] Bekeaken up 23 mei 2016.</ref>
 
 ==Etymology==
-Kenia is vernöömd når de [[Barg Kenia]]. De moderne name wör vöär et eyrste dale skreaven döär den [[düütskland|düütsken]] verkenner [[Johann Ludgwig Krapf]] in de [[19e eeuw|19. eyw]]. Tydens synen trektocht med nen [[Kamba (volk)|Kambakaravaan]] under leiding van den legendarisken handelsman [[Höyvdman Kivoi]] saggen Krapf nen bargtop en vröäg wo as den heaten. Kivoi seade "''Kĩ-Nyaa''" of "''Kĩĩma- Kĩĩnyaa''", wårskynlik ümdat et swarte gesteynde en witten sney up de töppe em deaden denken an nen [[struusvoagel]].<ref>Sullivan, Paul (2006). ''Kikuyu Districts. Mkuki na Nyota Publishers, Dar es Salaam, Tanzania.</ref> Et Agikuyuvolk, dee as up de flanken van de Kenia woanet, nömet et ''Kĩrĩma Kĩrĩnyaga'' in öäre [[Kikuyu]]-språke, terwyl as de [[Embu (volk)|Embu]] em de "Kirenyaa" nömet. Alle drey de naams hebt de selvde beteakenis.<ref>[http://www.kenyaembassy.com/aboutkenyahistory.html Kenyaembassy.com. "History".] Bekeaken up 13 mei 2016.</ref>
+Kenia is vernöömd når de [[Barg Kenia]]. De moderne name wör vöär et eyrste dale skreaven döär den [[düütskland|düütsken]] verkenner [[Johann Ludwig Krapf]] in de [[19e eeuw|19. eyw]]. Tydens synen trektocht med nen [[Kamba (volk)|Kambakaravaan]] under leiding van den legendarisken handelsman [[Höyvdman Kivoi]] saggen Krapf nen bargtop en vröäg wo as den heaten. Kivoi seade "''Kĩ-Nyaa''" of "''Kĩĩma- Kĩĩnyaa''", wårskynlik ümdat et swarte gesteynde en witten sney up de töppe em deaden denken an nen [[struusvoagel]].<ref>Sullivan, Paul (2006). ''Kikuyu Districts. Mkuki na Nyota Publishers, Dar es Salaam, Tanzania.</ref> Et Agikuyuvolk, dee as up de flanken van de Kenia woanet, nömet et ''Kĩrĩma Kĩrĩnyaga'' in öäre [[Kikuyu]]-språke, terwyl as de [[Embu (volk)|Embu]] em de "Kirenyaa" nömet. Alle drey de naams hebt de selvde beteakenis.<ref>[http://www.kenyaembassy.com/aboutkenyahistory.html Kenyaembassy.com. "History".] Bekeaken up 13 mei 2016.</ref>
 
 Ludwig Krapf skreav beide ''Kenia'' en ''Kegnia'' as namen dale.<ref>Krapf, Johann Ludwig (1860). "Travels, Researches, and Missionary Labours in Eastern Africa. Frank Cass & Co. Ltd, London.</ref> Up ne kaarte uut [[1882]], teakend döär Joseph Thompsons, nen [[skotland|skotsken]] geoloogg en natuurundersöker, steyt de Barg Kenia as Mt. Kenia. De bargname is ne [[pars pro toto]] vöär et heyle land wörden. Toch köäm et noch nit heyl rap in bruuk. In de vroge koloniale tyd wör et land et [[Oust-Afrikaanske Protektoraat]] enömed. Pas in [[1920]] wör de name veranderd in de Keniaanske Kolony.
 
