--- a/Kenia.mw
+++ b/Kenia.mw
@@ -39,6 +39,23 @@ Kenia is vernöömd når de [[Barg Kenia]]. De moderne name wör vöär et eyrst
 
 Ludwig Krapf skreav beide ''Kenia'' en ''Kegnia'' as namen dale.<ref>Krapf, Johann Ludwig (1860). "Travels, Researches, and Missionary Labours in Eastern Africa. Frank Cass & Co. Ltd, London.</ref> Up ne kaarte uut [[1882]], teakend döär Joseph Thompsons, nen [[skotland|skotsken]] geoloogg en natuurundersöker, steyt de Barg Kenia as Mt. Kenia. De bargname is ne [[pars pro toto]] vöär et heyle land wörden. Toch köäm et noch nit heyl rap in bruuk. In de vroge koloniale tyd wör et land et [[Oust-Afrikaanske Protektoraat]] enömed. Pas in [[1920]] wör de name veranderd in de Keniaanske Kolony.
 
+==Geskydenisse==
+===Prehistory===
+[[File:Turkana Boy.jpg|thumb|upright=0.65|left|Den [[Turkana-jungen]], et [[fossyl]] van ne 1,6-miljoon jår olde [[menskachtige]] den as by et geslacht ''[[Homo erectus]]'' höyrt.]]
+
+Vündste van fossylen in Kenia wyset dat aapachtigen al 20 miljoon jår terügge al in et gebeed rundlöypen. Vündste by et [[Turkanamear]] töynet an dat [[menskachtige]]n so as de ''[[Homo habilis]]'' (tüsken 1,8 en 2,5 miljoon jår eleaden) en ''[[Homo erectus]]'' (tüsken 1,9 miljoon en 350,000 jår terügge) möägelik rechtstreykse vöärolders sint van de moderne ''[[Homo sapiens]]'' en leavden in et [[Pleistoceen]].
+
+By upgravingen an et Turkanamear in [[1984]] untdekkeden paleoantropoloog Richard Leakey en Kamoya Kimeu de [[Turkana-jungen]], een 1,6 miljoon jår old fossyl dee by de ''Homo erectus'' höyrt. Ölder undersöök når vroge menskachtigen steyt ouk up naam van Mark en Louis Leakey, dee de vrogste archeologiske upgraevingen leidden by [[Olorgesailie]] en [[Hyrax-höyvel]].
+
+===Neolitisk===
+De eyrste inwoaners van et hüdigendaagse Kenia warren [[Jager-gadderaars]], ungeveyr so as de moderne [[Khoisan]]-spreakers.<ref>Ehret, C. (2002) ''The Civilizations of Africa: a History to 1800'', University Press of Virginia, ISBN 0-8139-2085-X.</ref> Disse lüde wördden händig-an verdrüngen döär [[Kusjitisk]]e herdersvolker uut de [[Hoorn van Afrika]].<ref>Ehret, C. (1980) ''The historical reconstruction of Southern Cushitic phonology and vocabulary'', Kölner Beiträge zur Afrikanistik 5, Bd., Reimer, Berlin.</ref> Tydens et vroge [[Holoceen]] versköäv et lokale klimaat van dröyge når natter, wårdöär kulturele traditys as [[laandbouw|landbow]] en [[herderye]] kunden untwikkelen.
+
+Ründ 500 [[Jezus Christus|v. Kr.]] tröäken [[nilo-saharaanske språken|nilotiske]] [[veyholderye|veyholders]] vanuut et hüdige Süüd-Sudan Kenia binnen.<ref>Ehret, C. (1983) ''Culture History in the Southern Sudan'', J. Mack, P. Robertshaw, Eds., British Institute in Eastern Africa, Nairobi, pp. 19–48, ISBN 1-872566-04-9.</ref><>Ambrose, S.H. (1982). "Archaeological and linguistic reconstructions of history in East Africa." In Ehert, C., and Posnansky, M. (eds.), ''The archaeological and linguistic reconstruction of African history'', University of California Press, ISBN 0-520-04593-9.</ref>
+
+Rund et eyrste millenium warren ouk [[bantu-språken|bantu]]-volker der hen etröäken.<ref>Ehret, C. (1998) ''An African Classical Age : Eastern and Southern Africa in World History, 1000 B.C. to A.D. 400.'', University Press of Virginia, Charlottesville, pp. xvii, 354, ISBN 0-8139-2057-4.</ref> Disse lüde köämen oorsprunkelik vanaf de [[Benuerivyr]] in [[West-Afrika]], wår as vandage den dag oust-[[Nigeria]] en west-[[Kameruun]] ligt.<ref>Smith, C. Wayne (1995) ''Crop Production: Evolution, History, and Technology'', John Wiley & Sons, p. 132, ISBN 0-471-07972-3.</ref> De bantumigraty brachden nye untwikkelingen in landbow en [[metaalbewarking]] når et gebeed. Hüdigendaagse bantugrupen sint under meyr de [[Kikuyu (volk)|Kikuyu]], [[Luhya (volk)|Luhya]], [[Kamba (volk)|Kamba]], [[Gusii (volk)|Kisii]], [[Meru (volk)|Meru]], [[Kuria (volk)|Kuria]], [[Aembu]], [[Ambeere]], [[Wadawida]]-Watuweta, Wapokomo en [[Mijikenda (volk)|Mijikenda]].
+
+Upmarkelike vöärhistoriske steades in et keniaanske binnenland sint de archeo-astronomiske steade [[Namoratunga]] up et wedsten van et Turkanameyr en et ummüürde kamp [[ThimLich Ohinga]] in de gråfskap [[Migori]].
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
