--- a/Kenia.mw
+++ b/Kenia.mw
@@ -50,7 +50,7 @@ By upgravingen an et Turkanamear in [[1984]] untdekkeden paleoantropoloog Richar
 ===Neolitisk===
 De eyrste inwoaners van et hüdigendaagse Kenia warren [[Jager-gadderaars]], ungeveyr so as de moderne [[Khoisan]]-spreakers.<ref>Ehret, C. (2002) ''The Civilizations of Africa: a History to 1800'', University Press of Virginia, ISBN 0-8139-2085-X.</ref> Disse lüde wördden händig-an verdrüngen döär [[Kusjitisk]]e herdersvolker uut de [[Hoorn van Afrika]].<ref>Ehret, C. (1980) ''The historical reconstruction of Southern Cushitic phonology and vocabulary'', Kölner Beiträge zur Afrikanistik 5, Bd., Reimer, Berlin.</ref> Tydens et vroge [[Holoceen]] versköäv et lokale klimaat van dröyge når natter, wårdöär kulturele traditys as [[laandbouw|landbow]] en [[herderye]] kunden untwikkelen.
 
-Ründ 500 [[Jezus Christus|v. Kr.]] tröäken [[nilo-saharaanske språken|nilotiske]] [[veyholderye|veyholders]] vanuut et hüdige Süüd-Sudan Kenia binnen.<ref>Ehret, C. (1983) ''Culture History in the Southern Sudan'', J. Mack, P. Robertshaw, Eds., British Institute in Eastern Africa, Nairobi, pp. 19–48, ISBN 1-872566-04-9.</ref><>Ambrose, S.H. (1982). "Archaeological and linguistic reconstructions of history in East Africa." In Ehert, C., and Posnansky, M. (eds.), ''The archaeological and linguistic reconstruction of African history'', University of California Press, ISBN 0-520-04593-9.</ref>
+Ründ 500 [[Jezus Christus|v. Kr.]] tröäken [[nilo-saharaanske språken|nilotiske]] [[veyholderye|veyholders]] vanuut et hüdige Süüd-Sudan Kenia binnen.<ref>Ehret, C. (1983) ''Culture History in the Southern Sudan'', J. Mack, P. Robertshaw, Eds., British Institute in Eastern Africa, Nairobi, pp. 19–48, ISBN 1-872566-04-9.</ref><ref>Ambrose, S.H. (1982). "Archaeological and linguistic reconstructions of history in East Africa." In Ehert, C., and Posnansky, M. (eds.), ''The archaeological and linguistic reconstruction of African history'', University of California Press, ISBN 0-520-04593-9.</ref>
 
 Rund et eyrste millenium warren ouk [[bantu-språken|bantu]]-volker der hen etröäken.<ref>Ehret, C. (1998) ''An African Classical Age : Eastern and Southern Africa in World History, 1000 B.C. to A.D. 400.'', University Press of Virginia, Charlottesville, pp. xvii, 354, ISBN 0-8139-2057-4.</ref> Disse lüde köämen oorsprunkelik vanaf de [[Benuerivyr]] in [[West-Afrika]], wår as vandage den dag oust-[[Nigeria]] en west-[[Kameruun]] ligt.<ref>Smith, C. Wayne (1995) ''Crop Production: Evolution, History, and Technology'', John Wiley & Sons, p. 132, ISBN 0-471-07972-3.</ref> De bantumigraty brachden nye untwikkelingen in landbow en [[metaalbewarking]] når et gebeed. Hüdigendaagse bantugrupen sint under meyr de [[Kikuyu (volk)|Kikuyu]], [[Luhya (volk)|Luhya]], [[Kamba (volk)|Kamba]], [[Gusii (volk)|Kisii]], [[Meru (volk)|Meru]], [[Kuria (volk)|Kuria]], [[Aembu]], [[Ambeere]], [[Wadawida]]-Watuweta, Wapokomo en [[Mijikenda (volk)|Mijikenda]].
 
