--- a/Kenia.mw
+++ b/Kenia.mw
@@ -81,7 +81,7 @@ Vöär hunderden jåren hevt de keniaanske küste ne belangryke steade weasd vö
 
 Et koloniale verleaden van Kenia begint by et uprichten van nen [[Düütske Ryk|Düütsken]] beskarmståt oaver et küstbesit van de Sultan van Zanzibar in [[1885]], wårnå in [[1888]] de [[Keiserlike Britske Oust-Afrikaanske Kompany]] der oaverhen köäm. Keiserlike stryd wör vöärkoamen döärdat Düütskland de küstgebeden an Grout-Britannie gavven in [[1890]]. Kört dårup wör de [[Ugandeeske Spoarlyne]] döär et land legd.
 
-Van [[1890]] töt [[1900]] vöchtden een paar volker teagen de spoerlyne, med name de [[Nandi (volk)|Nandi]] under anvoring van ''[[Orkoiyot]]'' [[Koitalel Arap Samoei]]. Toch güngen de britten der med vöärtan. De ''Nandi'' warren de eyrsten dee in een reservaat estöäken wörden üm se van de spoarlyne weg te holden.
+Van [[1890]] töt [[1900]] vöchtden een paar volker teagen de spoarlyne, med name de [[Nandi (volk)|Nandi]] under anvoring van ''[[Orkoiyot]]'' [[Koitalel Arap Samoei]]. Toch güngen de britten der med vöärtan. De ''Nandi'' warren de eyrsten dee in een reservaat estöäken wörden üm se van de spoarlyne weg te holden.
 
 In dee tyd wördden der een flink antal vaklüde uut [[India]] haald üm an de spoarlyne te warken.<ref>R. Mugo Gatheru (2005) ''Kenya: From Colonization to Independence, 1888–1970'', McFarland, ISBN|0-7864-2199-1</ref> See en öäre nåkoamelingen sint de basis van een antal kenmarkend indiaske gemeynskappen in Kenia, so as de Ismaili-moslims en [[Sikh]].<ref>[http://orvillejenkins.com/profiles/sikh.html Orvillejenkins.com. "Sikh."] Bekeaken up 16 april 2010.</ref>
 
@@ -97,7 +97,7 @@ In 1920 wör de Oust-Afrikaanske Beskarmståt in ne kolony ümsat en når Kenia 
 
 In de eyrste hälvte van de 20. eyw wördden de binnenlandse houglanden untgünnen döär britske en andere europeeske buren, dee ryke wördden an [[koffy]]- en [[tea]]-plantages.<ref>[http://www.time.com/time/magazine/article/0,9171,901759-3,00.html "We Want Our Country"]. ''Time''. 5 November 1965.</ref> (Eyne beskryving van disse tyd van verandering döär de ougen van nen kolonist is ''Uut Afrika'' van [[Daenemarken|daenske]] skryvster Barones Karen von Blixen-Finecke, uutgeaven in [[1937]].) Teagen de jåren '30 van de 20. eyw woanden der ungeveyr 30.000 blanke kolonisten in et gebeed. See kreagen politiken invlood döärdat se bydröägen an de marktekonomy. 
 
-Toch woandn der al meyr as ne miljoon stamleyden van et [[Kikuyu (volk)|Kikuyu-volk]] in de binnenlandse houglanden. Ümdat dee as rundtrekkende buren leavden, makeden se nit up Europeeske wyse anspråke up et land. Üm de eygene belangen te beskarmen, verböäden de kolonisten et verbowen van koffy, voorden ne hüttenbelasting in en de landlousen kreagen stöädigan minder land toweysen as uuttuusk vöär et wark wat se leyverden. Dårup tröäken der machtige grupen lüde richting de steaden. Teagen de vyvtiger jåren woanden der rund de 80.000 blanke kolonisten in Kenia.<ref>"''[https://books.google.com/books?id=R-r3g6OdLEUC&pg=PA28 Kenya]''". Matthew Firestone (2009). p. 28. ISBN|1-74104-773-0.</ref>
+Toch woanden der al meyr as ne miljoon stamleyden van et [[Kikuyu (volk)|Kikuyu-volk]] in de binnenlandse houglanden. Ümdat dee as rundtrekkende buren leavden, makeden se nit up Europeeske wyse anspråke up et land. Üm de eygene belangen te beskarmen, verböäden de kolonisten et verbowen van koffy, voorden ne hüttenbelasting in en de landlousen kreagen stöädigan minder land toweysen as uuttuusk vöär et wark wat se leyverden. Dårup tröäken der machtige grupen lüde richting de steaden. Teagen de vyvtiger jåren woanden der rund de 80.000 blanke kolonisten in Kenia.<ref>"''[https://books.google.com/books?id=R-r3g6OdLEUC&pg=PA28 Kenya]''". Matthew Firestone (2009). p. 28. ISBN|1-74104-773-0.</ref>
 
 Tydens de [[Tweyde Wearldoorlog]] was Kenia ne vöärname brunne van mankracht en vöärråden vöär et Vereynigd Köäninkryk. Ouk in Kenia selv wör der vöchten, tüsken de Allieerden en [[Köyninkryk Italie|italiaanske]] trupen, doo as dee lätsten tüsken 1940 en 1941 Kenia binnenvöllen. [[Wajir]] en [[Malindi]] wördden ouk bombardeerd.
 
