*Empty MediaWiki Message*

--- a/Monte_Águila.mw
+++ b/Monte_Águila.mw
@@ -1,14 +1,37 @@
 [[Bestaand:Monte_1.jpg|duum|250x250px|Monte Águila]]
 '''Monte Águila''' is een [[Chili|chileenske]] stad in de [[gemiente|gemeynde]] [[Cabrero]], dat deyl uutmaakt van de regio [[Biobío]]. Et hevt ungevear 6.090 inwoaners (bron: INE, 2002).
 
-<gallery mode="packed">
-Bestaand:Inauguracion Nueva Plaza de Monte Aguila 2017 (12).jpg
-Bestaand:Inauguracion Nueva Plaza de Monte Aguila 2017 (14).jpg
-Bestaand:Inauguracion Nueva Plaza de Monte Aguila 2017 (63).jpg
-</gallery>
+<br />
 
 == Uutgånde verwysingen ==
-{{commons|Chile}}
+<gallery mode="nolines" widths="200" heights="180">
+
+File:Inauguracion Nueva Plaza de Monte Aguila 2017 (12).jpg|
+
+File:Bomberos monte aguila.jpg|
+
+File:Capilla carmen monte aguila.jpg|
+
+File:Img-estadio.jpg|
+
+File:Entrada x yumbel.jpg|
+
+File:Premiacion O.V.V. 2017 (4).jpg|
+
+File:Copa de agua monte aguila.jpg |
+
+File:Desfile monte aguila 2016 (3).jpg|
+
+File:Inauguracion Nueva Plaza de Monte Aguila 2017 (103).jpg|
+
+File:Inauguracion Nueva Plaza de Monte Aguila 2017 (63).jpg|
+
+File:Inauguracion Nueva Plaza de Monte Aguila 2017 (14).jpg|
+
+File:Carros abandonados mte aguila.jpg|
+
+</gallery>{{commons|Monte Aguila}}
+
 * [http://www.monteaguila.cl/ Monteaguila.cl]
 
 {{Dialekt|sdz||Nysassiske Skryvwyse}}
