Versie 302822 van [[Special:Contributions/2A02:A454:B3F3:1:5406:C961:216E:3042|2A02:A454:B3F3:1:5406:C961:216E:3042]] ([[User talk:2A02:A454:B3F3:1:5406:C961:216E:3042|overleg]]) weerummedreid - Neaderlandsk?

--- a/Upsmük.mw
+++ b/Upsmük.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Auguste-Amélie deBavière Stieler.jpg|duum|n Vrouw mit opsmuk]]
-'''Opsmuk''' of een '''sieraad''' is een persoonlijk versiersel, zo als een [[ketting (sieraad)|ketting]], [[ring]], of een [[armband]], dat gemaakt is van [[juwelen]], [[edelmetaal|edelmetalen]] of andere (natuurlijke) materialen. Opsmuk wordt op t lief gedragen, bijvoorbeeld om de [[armen]], [[halzen]], [[vinger]]s [[voet|voeten]] en ga zo maar door. Soms wordt het ook ''door'' t lief gedragen, voorbeelden daarvan zijn de [[spijkerbroek|spijkerbroek]], [[oorbelle]]n, [[prins Albert-ring]] of de [[tongspieker]]. Opsmuk heeft tegenwoordig vooral als doel t lief 'mooier' te maken, hier heef iedereen vanzelfsprekend zijn eigen mening over wat mooi en lelijk is.
+'''Opsmuk''' of n '''sieraod''' is n persoonlik versiersel, zo as n [[ketten (sieraod)|ketten]], [[ring]], of n [[narmbaand]], dat emaakt is van [[juwelen]], [[edelmetaol|edelmetaolen]] of aandere (natuurlike) materialen. Opsmuk wördt op t lief edreugen, bieveurbeeld um de [[narm]]s, [[halze]], [[vinger]]s, [[inkel]]s, [[voot|voten]] en gao zo mer deur. Soms wördt t oek ''deur'' t lief edreugen, veurbeelden daorvan bin de [[boekspieker|buukspieker]], [[oorbelle]]n, [[prins Albert-ring]] of de [[tongspieker]]. Opsmuk hef tegenswoordig veural as doel t lief 'mooier' te maken, hier hef iederene vanzelf zien eigen menige over wat mooi en lillik is.
 
-Vroeger gebruikten ze opsmuk vooral om praktischere redenen, zo als het omhoog houden van [[kleraozie (dit kan ik niet vertalen van de gene die dit vooraf heeft geschreven)]] of laten zien dat je van adel bent. Tegenwoordig wordt het zowat alleen nog maar gebruikt als versiering, maar ook om te laten zien dat je [[religie|gelovig]] ben (bijvoorbeeld met een [[kruis]], [[ichtus-symbool]], [[davidsterren]], [[pentagram]], [[yin en yang|yin-en-yangsymbool]], [[om|om-symbool]]), of om politieke opvattingen te laten zien.
+Vrogger gebruukten ze opsmuk veural um praktiese redens, zo as t umhoge houwen van [[kleraozie]] of laoten zien da'j van aodel bin, tegensworig wördt t zwat allinnig nog mer gebruukt as versiering, mer oek um te laoten zien da'j [[religie|geleuvig]] bin (bieveurbeeld mit n [[kruusjefiks]], [[ichtus-symbool]], [[davidsteerne]], [[pentagram]], [[yin en yang|yin-en-yangsymbool]], [[om|om-symbool]]), of um politieke opvattingen te laoten zien. 
 
 ==Nedersaksies==
 {{Nds/opsmuk}}
