--- a/Kenia.mw
+++ b/Kenia.mw
@@ -103,6 +103,17 @@ Tydens de [[Tweyde Wearldoorlog]] was Kenia ne vöärname brunne van mankracht e
 
 Do as de britske [[Köäninginne Elizabeth II|Princesse Elizabeth]] en öären man [[Prins Philip]] up vakanty warren in Kenia in [[1952]], köäm öären vader [[Köänink George VI]] uut de tyd. De junge princesse güng medeyne når huus en wör een jår later kroned töt Köäniginne Elizabeth II.<ref>[https://www.telegraph.co.uk/news/uknews/the_queens_diamond_jubilee/9046958/Diamond-Jubilee-the-moment-that-Princess-Elizabeth-became-Queen.html Vickers, Hugo. "Diamond Jubilee: the moment that Princess Elizabeth became Queen." The Daily Telegraph, London.] Bekeaken up 29 januari 2012.</ref>
 
+===Mau Mau-upstand===
+[[File:Statue of Dedan Kimathi Nairobi, Kenya.jpg|thumb|Standbeald van [[Dedan Kimathi]], nen keniaansken upstandsleider van et [[Mau Mau]]-leager wat as teagen et britske koloniale systeem vöcht.]]
+
+Tüsken oktober 1952 en december 1959 was der upröör in Kenia vanweage de Mau Mau-upstand teagen britske oaverhearsking. Leaden van de Mau Mau, ouk bekend as et keniaanske land- en vryheidsleager, höyrden vöäral by de Kikuyu-stamme.
+
+Den guvernöör vröäg britske en afrikaanske trupen an, wårunder de [[Köäninglike Afrikaanske Skütterye]]. De britten startden underdrükkingsveldtochten. In mei 1953 nöär Generaal Sir George Erskine de leiding as leagerleider van koloniale strydkrachten, med persöynlike goodköäring van [[Winston Churchill]].<ref>Maloba, Wunyabari O. (1993) ''Mau Mau and Kenya: An Analysis of Peasant Revolt'', Indiana University Press, 0852557450.</ref>
+
+Med et gevangenneamen van Warũhiũ Itote (ouk bekend as [[Generaal China]]) up 15 january 1954 en de dårup volgende undervråging kreagen de britten beater insicht in de Mau Mau-organisaty. Under de name Operaty Anbeald beleagerden de britten up 24 april 1954 Nairobi. De besetters wördden döärelichted en anhangers van de Mau Mau når [[gevangenkamp]]en stüürd. Vöär de oaverwinning was de Home Guard et belangrykste leagerunderdeyl, ümdat et bestünd uut afrikanen dee as trow an de krone warren en nit uut butenlanders so as et [[Britse Leager]] of de Köäninglike Afrikaanske Skütterye. Teagen et ende van den upstand had de Home Guard 4686 Mau Mau ümmebracht, wat 42% van alle upstandelingen was.
+
+Et grypen van [[Dedan Kimathi]] up 21 oktober 1956 in [[Nyeri]] gavven den döärslag vöär et verslån van de Mau Mau. In disse tyd güng et beleid vöär landtowysing flink up de sküppe. Et belangrykste hyrin was et Swynnertonplan, wårmed kroongetrowe lüde ne beloaning kreagen en Mau Mau-anhangers straffed wördden.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
