*Empty MediaWiki Message*

--- a/Upsmük.mw
+++ b/Upsmük.mw
@@ -3,7 +3,7 @@
 
 Vrogger was upsmük, nåst dat et dekorativ was, vake ouk funktioneel, so wördde et byvöärbeald gebrüked üm [[kleraozie|kleaderagy]] ümhouge te holden of et wördde et edröägen üm de houge måtskappelike ståtus düdelik te maken. Teagenswoordig hevt een syråd vöäral een dekorative funkty, mär kan ouk edröägen wörden üm gelöyvsoavertügingen ([[krüüsjefiks]], [[davidstearne]], [[ichtus]]symbool) of politike upvattingen an te geaven, of een andere ütingsform van van persoonlike identifikaty.  
 
-==Nedersaksies==
+==Sassisk==
 {{Nds/opsmuk}}
 
 [[Kategorie:West-Veluws_artikel]]
