*Empty MediaWiki Message*

--- a/Et_Harde.mw
+++ b/Et_Harde.mw
@@ -1,19 +1,18 @@
-{{Titel kleine letter}}
-'''t Harde''' is n dorp op de [[Veluwe]] in de [[gemiente (bestuur)|gemeente]] [[Elburg]]. t Is n bosrieke plaotse, bekend van de militaere kazerne op de Woldbarg.
+'''Et Harde''' ([[Nederlaans|Nederlands]]: '' 't Harde'') is een dorp up de [[Veluwe]] in de [[gemiente (bestuur)|gemeynde]] [[Elburg|Elbörg]]. Et is een bosryke plaatse, bekend van de militäre kaserne up de Woldbarg.
 
-t Dorp is verneumd naor de struktuur van de grond, dat harder is as de grond in andere darpen/steden in de kontreien. t Harde had op [[1 jannewaori]] [[2006]] zwat 6.000 inwoeners en is daormee nao Elburg de grootste plaotse in de gemeente. t Dorp ligt bie de A28 ([[Amersfoort]]-[[Zwolle]]) en hef n [[stasion]] an de [[spoorliende]] tussen de zelfde steden. De [[stoptrein]] stopt der twee keer in t ure per richting.
+Et dorp is vernöömd når de struktuur van de grund, dat harder is as de grund in andere dorpen/städen in de kontreinen. Et Harde had op [[1 jannewaori|1 januåri]] [[2006]] sowat 6.000 inwuners en is dårmead nå Elbörg de groutste plaatse in de gemeynde. Et dorp ligt by de A28 ([[Amersfoort]]-[[Zwolle]]) en hevt een [[station]] an de [[spoorlynde]] tüsken deselvde städen. De [[stoptrein]] stopt der twey keyr in et üre per richtinge.
 
-t Harde lag n tied in twee gemeenten; de gemeente [[Oldebroek]] en de gemeente [[Doorspiek]]. Laoter wieren t Oldebroeker deel van t Harde bie de gemeente Elburg edaon. De tweedeling ku'j nog zien in bieveurbeeld de twee vestigingen van de [[Rabobank]], één onder Oldebroek en één onder Elburg. Ook wördt der n wiek in volksmond de Oldebroeker niejbouw eneumd.
+Et Harde lag een tyd in twey gemeynden; de gemeynde [[Oldebroek|Oldebrook]] en de gemeynde [[Doorspiek|Doorspyk]]. Later weren et Oldebroker deyl van Et Harde by de gemeynde Elbörg edån. 
 
-==Karkelik leven==
-* [[Rooms-Katholieke Karke|Rooms-katholieke karke]] ''De Goeie Herder Karke'' (esleuten in 2006, esloopt in 2011)
-* [[Nederlaandse Hervormde Karke]] ''Elim''
-* [[Protestantse Karke in Nederlaand|Protestantse]] gemeente t Harde, ''Maranatha Karke''
-* [[Griffermeerde Karken vrie-emaakt|Griffermeerd vrie-emaakten karke]] ''De Schuilhof''
-* [[Eukumeniese gemeente]] ''Knobbel''
-* [[Evangelies|Evangeliese gemeente]] ''De Fontein''
+==Karkelik leaven==
+* [[Rooms-Katholieke Karke|Roomsk-katolike karke]] ''De Gode Herder Karke'' (eslöäten in 2006, eslouped in 2011)
+* [[Nederlaandse Hervormde Karke|Nederlandse Herformde Karke]] ''Elim''
+* [[Protestantse Karke in Nederlaand|Protestantse]] gemeynde Et Harde, ''Maranatha Karke''
+* [[Griffermeerde Karken vrie-emaakt|Gereformeerd vryemakede karke]] ''De Schuilhof''
+* [[Ökumeniske gemeynde]] ''Knobbel''
+* [[Evangelisk|Evangeliske gemeynde]] ''De Fontein''
 
 {{Elburg}}
-{{Dialekt|ovel|Elburg|Algemene Nedersaksiese Schriefwieze}}
+{{Dialekt|ovel|Elbörg|Nysassiske Skryvwyse}}
 
 [[Kategorie:Plaotse in Gelderlaand]]
