--- a/Kenia.mw
+++ b/Kenia.mw
@@ -117,9 +117,24 @@ Et grypen van [[Dedan Kimathi]] up 21 oktober 1956 in [[Nyeri]] gavven den döä
 ===Unafhanglikheid===
 [[File:Jomo Kenyatta.jpg|thumb|upright|left|[[Jomo Kenyatta]], den eyrsten president en stichter van Kenia.]]
 
-De eyrste direkte verkesingen vöär inheymske kenianen vöär den Wetgeavenden Råd wördden in [[1957]] hölden. Undanks de hoape van de britten up winst van 'gemåtigde' lokale rivalen, was et de [[Keniaansk Afrikaanske Nationale Uny]] (KANU) van [[Jomo Kenyatta]] dee ne regeyring vörmden. De Keniaanske Kolony en de Keniaanske Beskarmståt köämen beide te ende up 12 december [[1963]], do as unafhanglikheid oaver heyl Kenia uutspröäken wör. Et Vereynigd Köäningryk gavven de suvereiniteit oaver. Tegelyke dead ouk den sultan van Zanzibar afstand van alle anspråke up et land, so dat Kenia geheyl unafhanglik was.<ref>Roberts-Wray, Kenneth. "Commonwealth and Colonial Law". Stevens, London. 1966. p 762.</ref> Precys een jår later, up 12 december [[1964]], wör Kenia ne republyk under de naam "Republik Kenia".
+De eyrste direkte verkesingen vöär inheymske kenianen vöär den Wetgeavenden Råd wördden in [[1957]] hölden. Undanks de hoape van de britten up winst van 'gemåtigde' lokale rivalen, was et de [[Keniaansk Afrikaanske Nationale Uny]] (KANU) van [[Jomo Kenyatta]] dee ne regeyring vörmden. De Keniaanske Kolony en de Keniaanske Beskarmståt köämen beide te ende up 12 december [[1963]], do as unafhanglikheid oaver heyl Kenia uutspröäken wör. Et Vereynigd Köäningryk gavven de suvereiniteit oaver. Up etselvde ougenblik dead ouk den sultan van Zanzibar afstand van alle anspråke up et land, so dat Kenia geheyl unafhanglik was.<ref>Roberts-Wray, Kenneth. "Commonwealth and Colonial Law". Stevens, London. 1966. p 762.</ref> Precys een jår later, up 12 december [[1964]], wör Kenia ne republyk under de naam "Republik Kenia".
 
 Tegelyke vöcht et keniaanske leager de [[Shiftaoorlog]] teagen de etniske [[Somali (volk)|somaliske]] rebellen in de Noordelike Grensstreake, dee as sik wullen afsplitsen en bie an [[Somalie]] höyren wullen.<ref>Bruce Baker, ''Escape from Domination in Africa: Political Disengagement & Its Consequences'', (Africa World Press: 2003), p.83</ref> Ne wåpenstilstand under de naam Arusha Memorandum wör underskreaven in oktober [[1967]], mär et bleav noch töt 1969 unrüstig.<ref>Hogg, Richard (1986)."The New Pastoralism: Poverty and Dependency in Northern Kenya." Africa: Journal of the International African Institute. Vol 56, is 3. p 319–333. jstor 1160687. Doi 10.2307/1160687.</ref> Üm wydtere invasys te untmodigen underskreav Kenia een verdeadigingsoavereynkumst med [[Ethiopie]] in 1969, den as noch altyd in stand is.<ref>[http://www.globalsecurity.org/military/library/report/1992/BHK.htm Globalsecurity.org (1992). Pike, John. "Post-Independence Low Intensity Conflict in Kenya."] Bekeaken up 16 april 2010.</ref>
+
+=== Den eyrsten president van Kenia ===
+Med et uutroupen van den Republik Kenia up 12 deccember 1964 wör [[Jomo Kenyatta]] köäsen as president.<ref>[https://web.archive.org/web/20090608141216/http://kenyaun.org/polhistory.html Kenyaun.org (archiveerd). "Kenya at the United Nations." Permanent Mission of the Republic of Kenya to the United Nations (2002).] Archivdåtum: 8 juni 2009. Bekeaken up 15 february 2010.</ref> Under Kenyatta breiden sik [[umkeuperieje|ümköypbårheid]] rap uut in de regeyring, openbåre deensten en sakenwerld. Kenyatta en syne family verrykeden sik med de groutskeypske ankoup van vastgood. Med öäre ankoupen in centraal-Kenia, de [[Riftvallei]] en de küstprovincys kreagen se vöäle hellige landlose kenianen teagen sik. Syne family versköäl sik achter syn presidentiäle amt üm wettelike en administrative obstakels te ümseilen. De Kenyatta's investeerden flink in de hotellerye. Kenyatta selv was eygener van et Leonard Beach Hotel.<ref>Boone, Catherine. April 2012. "Land Conflict and Distributive Politics in Kenya. African Studies Review. vol 55, is 1. p 75–103. Doi 10.1353/arw.2012.0010. ISSN 0002-0206. hdl 2152/19778}}</ref>
+
+Kenyatta bleav president töt synen doud up 22 augustus 1978.<ref>Ndegwa, Stephen N. 1999. "Multi-Party Politics in Kenya: the Kenyatta and Moi States and the Triumph of the System in the 1992 Election (review). Africa Today. vol 46, is 2. p 146-148. doi 10.1353/at.1999.0008. ISSN 1527-1978.</ref> [[Daniel arap Moi]] volgden em up.
+
+===Moi-tyd===
+Van [[1978]] töt [[2002]] was Daniel Arap Moi president. By verkesingen in [[1979]], [[1983]] (Vervroogde verkesingen) en [[1988]] had den president gin enkele teagenstand. De grundwet skreav ouk mär eyne partye vöär. De vervroogde verkesingen van 1983 warren een gevolg van nen mislükkeden ståtsgreap up 2 augustus [[1982]]. 
+
+[[File:Moi and Bush.jpg|thumb|[[Daniel arap Moi]], Kenia's tweyden president med [[George W. Bush]] in [[2001]]]]
+Den mislükkenden ståtsgreap was upesat döär ne laegereplaatsden medwarker van de [[luchtmacht]], suldåt [[Hezekiah Ochuka]]. Hee wör vöäral hülpen döär andere medwarkers van de luchtmacht. Al rap wör den ståtsgreap afkapped döär trupen under leiding van leagerleider [[Mahamoud Mohamed]], nen veteraan uut et somaliske leager. <ref>[https://books.google.com/books?id=3MctAQAAIAAJ Nyamora Communications Limited (1992). "Society". p 12.]</ref> Under andere et gewone leager, de paramilitaere polity en later ouk de gewone polity warren der by.
+
+In den nåsleap van de [[Garissaslachting]] van [[1980]] begüngen in [[1984]] keniaanske trupen de [[Wagallaslachting]] teagen dusenden börgers in [[Gråfskap Wajir]]. Pas in [[2011]] wör der een formeel undersöök inricht.<ref>https://www.bbc.co.uk/news/world-africa-12463001 BBC. "Wagalla massacre: Raila Odinga orders Kenya probe." Skreaven up 14 november 2013. Bekeaken up 11 february 2011.</ref>
+
+By de verkesingen van 1988 wördden et ''mlolongo''-systeem invoord, wårby as stemmers sik in ne lyne achter öär favorite kandidåt musten upstellen, in steyde van med anonyme stembiljetten.<ref>[https://web.archive.org/web/20110215084715/http://www.highbeam.com/doc/1P2-1241691.html Harden, Blaine (25 February 1988). "Many Voters Stay Home as Kenya Drops Secret Ballot in Parliamentary Election". ''[[The Washington Post]]''.</ref> Vöär vöäle lüde was dit et deeptepünt van een slim undemokratisk regime. Et leidden töt wydverbreid protest vöär bywarking van de grundwet. In de jåren dårup güngen verskeidene klausules up de sküppe, so as denne wårin as mär eyne politike partye möäg.<ref>[https://web.archive.org/web/20100629014936/http://religiousfreedom.lib.virginia.edu/rihand/Kenya.html (archiveerd) Moreno, Pedro C. Handbook on Religious Liberty Around the World. 'Kenya'. The Rutherford Institute. Charlottesville, VA.]</ref>
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
