--- a/Marilyn_Monroe.mw
+++ b/Marilyn_Monroe.mw
@@ -1,4 +1,5 @@
 [[Bestaand:Marilyn Monroe in Some Like It Hot trailer.jpg|thumb| Marilyn Monroe in Some Like It Hot]]
+[[File:Marilyn Monroe photo pose Seven Year Itch.jpg|thumb|left]]
 '''Marilyn Monroe''' ([[1 juni]] [[1926]] – [[5 augustus]] [[1962]]) was ne [[Verienigde Staoten van Amerika|Amerikaanse]] aktrise, zangeresse, en model. As kind hef ze völle in plaeggezinnen ezetten. Monroe is eure loopbane begonnen as model, wat leidden tot n filmkontrakt in [[1946]]. Eure eerste rolle was dee van Evie in den film ''Dangerous Years'' oet [[1947]]. Eure eerste rollen waren klein, maor eur akteerwark in The Asphalt Jungle en All About Eve (beide oet 1950) wordden deur de kritisi good op-evat. Monroe wordden ne steurig grotere sterre deur t spöllen in films as [[Gentlemen Prefer Blondes]], How to Marry a Millionaire, [[Some Like It Hot]], en [[The Seven Year Itch]]. Eur optraeden in [[Bus Stop]] wordden alderbarstend waardeerd deur de filmkritisi, en ze won nen Golden Globe Award veur eur wark in Some Like it Hot.
 
 De leste jaoren van eur laeven wordden ovverskaduwd deur zeekte en problemen in eur priveelaeven. Eur oet de tied kommen, deur te völle [[medisien]]en, is met vraogen en meugelike theorieën umgevven. Offisieel heetten t "waorskienlik zelfmoord", maor de meugelikheid van ovverdosis (al dan neet bewust), en ok moord of doodslag bunt neet definitief oeteslotten. 
