--- a/Noors.mw
+++ b/Noors.mw
@@ -30,10 +30,10 @@ t Noors (en de aandere Noord-Skandinaviese sproaken) steet bekeand um vervoging 
 * vie zeent = vi ''er''
 
 n Aander kenmoark is det et bepoalde lidwoard achter et naamwoard eplakt wörd, en et onbepoalde der vuur keump. Bv: 
-* (onbepoald) n book = ''en'' book, (bepoald) et book = ''boken''; 
+* (onbepoald) n book = ''en'' bok, (bepoald) et book = ''boken'';
 * (onbepoald) n hoes = ''et'' hus, (bepoald) et hoes = huset. 
 
-Hieroet blik ook det et Noors keant twee geslachten, namelik ''geslachtelik'' en ''onziedig''. Geslachtelike wöarde kriegent ''en'' as lidwoard, onziedige wöarde kriegent ''et''. Dit keump ook wier in de bievooglike wöarde: ''en stor bok'' (n groot book), ''et stort hus'' (n groot hoes).
+Hieroet blik ook det et Noors twee geslachten keant, namelik ''geslachtelik'' en ''onziedig''. Geslachtelike wöarde kriegent ''en'' as lidwoard, onziedige wöarde kriegent ''et''. Dit keump ook wier in de bievooglike wöarde: ''en stor bok'' (n groot book), ''et stort hus'' (n groot hoes).
 
 == Oetgoande verwiezing ==
 * [http://www.noorsetaal.org Noorsetaal.org]
