--- a/Maarten_Luther.mw
+++ b/Maarten_Luther.mw
@@ -9,25 +9,25 @@ Striedgeskriften duur, vor in tugen Luther wörden ok drek vertaald in 't [[Midd
 == Theologiese ideen ==
 't Evangelie is de waore schat van de karke. Disse stelling, uut de 95 stellings van 1517, is de aard veur 't benul in de theologie van Luther. In de middeleewen wördden de vraoge naor 't goed ween veur God (vri'jsprake van zunden) ok as deel van de kristelijke verzuuningsleer esteld. De rooms-kathelieke leer göngen dervan uut dat 't goed ween veur God deels töt staand ebracht kunnen wörden deur 't op biezunder geleuf an Kristus 't doe van goede warken. Goede warken levvert daormet 'n bi'jdrage an 't heil, 't behoald. Deur slechte warken (zunden) kunnen men - zo was de klassieke kathelieke opvatting - de heiligmakende genaa Gods verliezen. Deur bestudering van de Romeinenbrief kwaam Luther töt de opvatting dat goediging 'n vri'je gave Gods is die God bewes an godloze zundige meansen. Disse goediging is verwörven deur Kristus. De godloze kreg deel an de verwörven gerechtigheid van Kristus deur 't geleuf (Romeinen 1:16,17). 't Geleuf maakt iene met Kristus en plaatst dorumme de godloze weer op de juuste verhoalding met God.
 
-== Anti-Jeuds ==
-Veur de meeste luu stiet Maarten Luther bekend umme zien 95 stellings. Ok dat 'e ehölpen hef umme van 't Kattelieke geleuf of te kommen, wat veur ’n koppel luu ’n bevrieding was. 
+== Anti-Jöads ==
+Vöär de meyste lüde steyt Maarten Luther bekend üm syn 95 stellings. Ouk dat hee ehülpen hevt ümme van de macht van de katolike karke of te kummen, wat vöär een koppel lüde een bevryding was. 
 
-Mar der bint ter niet völle den weet dat Luther ok met jeuden gaanks ewest hef. Hi-j deun de Kattelieke Karke de skuld der van dat de jeuden zich niet töt Jezus bekeren wollen. Den zollen 't eur onmeuglik emaakt hebben dat zi-j Jezus as Messias zien konden. Luther dachten dat wenneer as zien Rifformatie in gaank was, dat de jeuden zich dan wal bekeren wollen. 
+Mar der bint der neet vöäle dee weat dat Luther ouk med jöäden gangs ewesd hevt. Hy döäd de katolike karke de sküld der van dat de jöäden sich neet töt Jesus bekeyren wolden. Den solden et ear unmöägelik emaked hebben dat sy Jesus as Messias seen konden. Luther dachden dat wanneyr as syn reformaty in gang was, dat de jöäden sich dan wal bekeyren solden. 
 
-Toe noa ’n zet de jeuden nog niet noar de karke kwaam, spetten ‘t hum dat. Noar verloop van de tied was 'e niet meer te sprekken oaver jeuden. Op 1543 schreven hi-j  ’t bukie ''Von den Juden und ihren Lügen''. Doarin giet 'e flink tegen de jeuden tekeer. Wat as 'e doar in schreven, doarvan zegt ter noe ’n koppel luu dat de Nazi’s 't veur hum edoane hebt.
+Toom as nå een set de jöäden noch neet når de karke kwamen, speaten et hüm dat. Nå verloup van de tyd was hee neet meyr te sprekken oaver jöäden. Up 1543 skreav hee  et bökyn ''Von den Juden und ihren Lügen'' ('' 'Oaver de jöäden en ear löägenes'''). Dårin geyt hee vlink teagen de jöäden tekeyr. Wat as hee döär in skreaven, dårvan segt der nu een koppel lüde dat de Nazi’s et vöär hüm edåne hebbet.
 
-Mar Luther haren niets tegen Jeuden as ras, mar wal wat tegen eur geleuf. Doar as de Nazi’s de Jeuden as ras niet anstön. Doar mu’w wal ’n verskil in zien.
+Mar Luther hadden niks teagen jöäden as rasse, mar wal wat teagen oar gelöyv. Dår as de Nazi’s de Jöäden as rasse neet anstönden. Dår müttet wy wal een verskil in seen.
 
-Hier ’n liesie was Luther op-esteld haren tegen de jeuden, oaver-enömmen uut ‘t bukie:
+Hyr et lysyn wat Luther up estelled hadde teagen de jöäden, oaver enöämen üüt et bökyn:
 
-: Ik doede oe, kristenen, mien road:
-: 1. De synagogen en jeudse schoelen mut in braand estökken wörden. Wat ter nie braanden wul, doar mut ’n bulte zaand oaverhen. Der mut niets meer van oaverblieven.
-: 2. Net-zo mut de huze van de jeuden met n grond gelieke edoane wörden. Loat eur mar op stallen wonen goan, dan kriegt ze wal deur da’ze gien boasies bint in oons Duutse va-laand.
-: 3. Alle Talmoeds, gebeden en buke mut de jeuden of-epakt wörden. Waant doar stiet niets aans as ofgoderi-je, leunges en gevluuk in.
-: 4. 't Is de rabbijnen verbeuden ’t jeudse geleuf an luu te leren. Döt der iene dat wal, dan mut 'e uut de tied edoane wörden.
-: 5. Jeuden magt te stroate niet op, loa’ze mar binnen in ’t huus blieven.
-: 6. Jeuden mut verbeuden wörden umme woeker te doen. Eur geld, gold en zilver mut of-epakt wörden, waant dat hebt ze weer van de kristenen of-epakt.
-: 7: De jonke en starke jeuden en jeudinnen mut in zwoar warken ezet wörden. Met 'n harde haand, umme eur de lamlennigheid of te leren.
+: Ik doo u, christenen, myn råd:
+: 1. De synagogen en jöädske skolen müt in brand estöäken wörden. Wat der neet branden wil, dår müt een bülde sand oaverhen. Der müt neets meyr van oaverblyven.
+: 2. Net so müt de huse van de jöäden med den grund gelyke edåne wörden. Låt ear mar up stallen woanen gån, dan kryget se wal döär dat se geyn båsys bint in uns düütske vaderland.
+: 3. Alle Talmuds, gebeaden en böke müttet de jöäden of gapt wörden. Want dår steut neets anders as ofgoderye, löägenes en gevlöök in.
+: 4. Et is de rabbynen verböäden et jöädske gelöyv an lüde te learen. Düt der eyne dat wal, dan müt hee edoud wörden.
+: 5. Jöäden magget te stråte neet up, låt se mar binnen in et hüüs blyven.
+: 6. Jöäden müttet verböäden wörden ümme woker te doon. Ear geld, gold en sülver müt of egapt wörden, want dat hebbet se wear van de christenen of egapt.
+: 7: De junge en starke jöäden en jöädinnen müttet up swår warken eset wörden. Med de harde hand, üm ear de lamlendigheid of te learen.
 
 == Nedersaksisch ==
 * [[Grunnegs]]: ''Meerten Luther''
