Ja heur ins: dialekten hebt doorgoand met invlood van boeten te maken. Dat heu'j d'r nich bie te zetten.

--- a/Hoogelaandsters.mw
+++ b/Hoogelaandsters.mw
@@ -65,8 +65,7 @@ t Hoogelaandsters wordt over t algemain zain as t maist karakteristieke dialekt 
 *Aal -in wordt -ien. Nait allend t woord "in", môr ook n hail ìnde konstruksies mit -in, zoas 'kinder' (HGL: kiender) en 'binden' (HGL: bienden)
 *De ì-klaank dij veuraal ien Oost Grunnen broekt wordt, is ien t Hoogelaandsters è. Dus nait 'mìnsk' en 'wìnsk', môr 'mènsk' en 'wènsk'.
 
-*Deurdat veul Hoogelaandster boeren zok rieker vuilden as de rest van de bevôlken, wollen zai bepoalde klanken "verzachten". t Gaait hier veuraal om de ai en oe klaank. Summege Hoogelaandsters zèggen doardeur bieveurbeeld "ik heb gijn huus", ien tieds dat de maiste Hoogelaandsters "ik heb gain hoes" zèggen zollen. Dit is nait oorspronkelk ienhaims, môr het tou moaken mit t fait dat dizze luu of heur veurollers besloten om dizze "zachtere" klanken te broeken. 
-
+*Deurdat veul Hoogelaandster boeren zok rieker vuilden as de rest van de bevôlken, wollen zai bepoalde klanken "verzachten". t Gaait hier veuraal om de ai en oe klaank. Summege Hoogelaandsters zèggen doardeur bieveurbeeld "ik heb gijn huus", ien tieds dat de maiste Hoogelaandsters "ik heb gain hoes" zèggen zollen.
 
 [[Ofbeelding:Hoogelaandsters.gif|250px|left|thumb|Lokoatsie van t Hoogelaandsters ien Nederlaand]]
 
