--- a/Kampers.mw
+++ b/Kampers.mw
@@ -1,7 +1,7 @@
 t '''Kampers''' is n zogenuumd [[stadsplat|stadsdialekt]] det in de [[Overiessel]]se stad [[Kampen]] espreuken wördt. t Kampers valt onder de  [[Sallaans|Sallandse]] dialektgroep en eurt bi'j t [[Nedersaksies]]. Net as veule andere stadsdialekten zo as t [[Daeventers|Deventers]], t [[Zutfens]] en t [[Zwols]], ef t Kampers n [[brauw-r]]. In de achttiende eeuw begun de bovenklasse van de Kampers en oek de Zwolse bevolking de taal mit n [[Frans]] aksent te kleuren umme zo belangrieker over te doen komen. Eén van de gevolgen was det ze de [[h-verdwiening|h vortlieten]]. n Ander kenmerk van t Kamper dialekt is det bi'j sommige woorden de ''ao''-klank uut t Nedersaksies veranderde in n ''öö''-klank, zo as in ''wöör'' (algemeen: waor of woar), dit verskiensel zie'j ok in t [[Zwols]] en t [[Zutfens]].
 
 ==Kampers as kultuurtaal==
-t Kamperse stadsdialekt wördt veurnamelik espreuken maar der is ok wat skrieverieje uutegeven in t Kampers. Veur de streektaal van West-Overiessel, wööronder t Kampers, ef t streekkennissentrum de [[Iesselakademie]] spellingsrichtlienen op-ezet.<ref>[http://www.ijsselacademie.nl/ija/taal/spellingsbrochure/inhoudsopgave.asp Spellingsrichtlienen van de Iesselakademie veur t West-Overiessels en Veluws]</ref> t Kampers kan ok prima eskreven wörden in de [[Algemene Nedersaksiese Schriefwieze|Algemene Nedersaksiese Skriefwieze]].
+t Kamperse stadsdialekt wördt veurnamelik espreuken maar der is ok wat skrieverieje uutegeven in t Kampers. Veur de streektaal van West-Overiessel, wööronder t Kampers, ef t streekkennissentrum de [[Iesselakademie]] spellingsrichtlienen op-ezet.<ref>[http://www.ijsselacademie.nl/ija/taal/spellingsbrochure/inhoudsopgave.asp Spellingsrichtlienen van de Iesselakademie veur t West-Overiessels en Veluws]</ref>
 
 Vanof ongeveer 1945 verskeen in de plaatselike krante wekeliks n [[nöalstukken|kollum]] in t Kamper dialekt onder de naam ''’Eij ’t ook ’eurd''. Jan B. Keuter skreef disse stukkies onder de naam  Drikus.
 
