/* Vechsporten */ Wa'k al zee: [[Mingde gevechtskeunsten]] kan net zo good hieroonder.

--- a/Sport.mw
+++ b/Sport.mw
@@ -86,6 +86,7 @@ Sporten waobie der op een formele meniere evochen wonnen:
 * [[Boksen]]
 * [[Judo]] 
 * [[Kerate]]
+* [[Mingde gevechtskeunsten]]
 * [[Scharmen]]
 * [[Worselen]]
 
