Mooier wapen, en nog svg ook. As 't effen kan mutten die wapens op alle gemeente-artikels.

--- a/Doezebarg.mw
+++ b/Doezebarg.mw
@@ -1,7 +1,7 @@
 {{Gemeente |
 naam = Doezebarg |
 bestaansnaam vlagge = Flag of Doesburg.svg |
-bestaansnaam wapen = Doesburg wapen.png |
+bestaansnaam wapen = Coat_of_arms_of_Doesburg.svg |
 lokasie = LocatieDoesburg |
 previnsie = [[Gelderlaand]] |
 heufplaose = '''Doezebarg''' |  
